# ori-lang

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_CHECKLIST.md  README.ja.md  README.md  README.pt-BR.md  full_diff.patch  ori.proj  scratch.orl  scratch2.orl  t.ori  te.orl  te.txt
.cargo/: config.toml
.github/workflows/: native-route.yml  release.yml
.grok/agents/: ori-lang-backend.md  ori-lang-diagnostics.md  ori-lang-docs.md  ori-lang-frontend.md  ori-lang-qa-daily.md
.sessions/: 1784013630804-825226195.sess
.verdent/plans/: Migration_to_Rust__Technical_Analysis_and_Implemen-05101053.plan.md  Zenith_Language_Evolution__Accessibility_&_Syntax_-05101109.plan.md
_archive/: local_changes.patch
_reversa_sdd/: analise-profunda-implementacao-linguagem.md  auditoria-profunda-implementacao-2026-05-17.md  auditoria-profunda-implementacao-linguagem-2026-05-13.md  plano-correcao-implementacao-linguagem.md  relatorio-fechamento-correcao-implementacao-linguagem.md  relatorio-fechamento-nova-rodada.md
benchmarks/language-comparison/: README.md  workload.c  workload.js  workload.orl  workload.py  workload.rs
compiler/: Cargo.toml  README.md
compiler/crates/ori-ast/: Cargo.toml
compiler/crates/ori-ast/src/: common.rs  expr.rs  item.rs  lib.rs  pattern.rs  stmt.rs  ty.rs
compiler/crates/ori-codegen/: Cargo.toml
compiler/crates/ori-codegen/src/: c_backend.rs  lib.rs  native_backend.rs
compiler/crates/ori-codegen/src/native_backend/: jit.rs  string_collector.rs  tests.rs
compiler/crates/ori-diagnostics/: Cargo.toml
compiler/crates/ori-diagnostics/src/: diagnostic.rs  lib.rs  source.rs  span.rs
compiler/crates/ori-driver/: Cargo.toml
compiler/crates/ori-driver/src/: doc_export.rs  emit.rs  explain.rs  lib.rs  main.rs  oridoc.rs  package.rs  pipeline.rs  update.rs
compiler/crates/ori-driver/src/pipeline/: doc_html.rs  fmt.rs  migrate_syntax.rs
compiler/crates/ori-driver/tests/: concurrency_async.rs  diagnostic_catalog.rs  doc_export.rs  doctor.rs  explain.rs  jit_run.rs  memory_arc.rs  method_resolution.rs  multifile_imports.rs  ori_spec.rs  performance_guard.rs  security_robustness.rs  self_update.rs  stdlib_fallback.rs  summary.rs
compiler/crates/ori-driver/tests/common/: mod.rs
compiler/crates/ori-driver/tests/multifile_imports/: collections.rs
compiler/crates/ori-hir/: Cargo.toml
compiler/crates/ori-hir/src/: hir.rs  lib.rs  lower.rs  monomorph.rs
compiler/crates/ori-hir/src/optimize/: const_fold.rs  dce.rs  inline_leafs.rs  mod.rs  pipeline.rs  strength_reduce.rs
compiler/crates/ori-lexer/: Cargo.toml
compiler/crates/ori-lexer/src/: lexer.rs  lib.rs  token.rs
compiler/crates/ori-lsp/: Cargo.toml
compiler/crates/ori-lsp/src/: main.rs  stdlib_catalog.rs
compiler/crates/ori-lsp/src/handlers/: completion.rs  diagnostics.rs  hover.rs  lint.rs  mod.rs
compiler/crates/ori-lsp/src/index/: mod.rs  project.rs  project_semantic.rs  semantic.rs
compiler/crates/ori-lsp/src/utils/: mod.rs  position.rs  uri.rs
compiler/crates/ori-lsp/tests/: e2e.rs
compiler/crates/ori-parser/: Cargo.toml
compiler/crates/ori-parser/src/: lib.rs  parse_expr.rs  parse_item.rs  parse_pat.rs  parse_stmt.rs  parse_ty.rs  parser.rs
compiler/crates/ori-runtime/: Cargo.toml
compiler/crates/ori-runtime/src/: debug_agent.rs  lib.rs  test_harness.rs  tests.rs
compiler/crates/ori-types/: Cargo.toml
compiler/crates/ori-types/src/: check.rs  def.rs  lib.rs  literal.rs  lower.rs  resolve.rs  stdlib.rs  ty.rs
compiler/crates/ori-types/src/check/: constraints.rs  match_exhaustiveness.rs
docs/: ARC_IMPLEMENTATION_PLAN.md  DOCS-STRUCTURE.md  IMPLEMENTATION_CHECKLIST.md  README.md  README.pt-BR.md  install.md  install.pt-BR.md  plano-correcao-bugs-2026-05-17.md  plano-correcao-implementacao-linguagem.md  plano-implementacao-lsp-avancado.md
docs/guides/: README.md  bootstrapping.md  cookbook-pequeno-medio.md  cookbook.md  cookbook.pt-BR.md  errors-null-void.md  errors-null-void.pt-BR.md  first-project-and-packages.md  first-project.md  first-project.pt-BR.md  language-comparison.md  performance.md  performance.pt-BR.md  report-bugs.md  report-bugs.pt-BR.md  (+4 more)
examples/: README.md  async_demo.orl  bytes_usage.orl  calculator.orl  collections_demo.orl  deque_demo.orl  error_handling.orl  file_organizer.orl  generics_showcase.orl  graph_demo.orl  heap_demo.orl  hello_world.orl  http_get.orl  json_validator.orl  language_features.orl  log_analyzer.orl  logic_and_matching.orl  map_set_graph.orl  native_showcase.orl  path_time_io.orl  process_runner.orl  queue_demo.orl  release_smoke.orl  scratch_interp.orl  stack_demo.orl  string_toolkit.orl  struct_demo.orl  task_cli.orl  tree_demo.orl
extensions/: README.md
runtime/: README.md
stdlib/: README.md  args.oridoc  args.orl  buffer.orl  bytes.orl  concurrent.orl  config.oridoc  config.orl  convert.orl  crypto.orl  deque.orl  doubly_linked_list.orl  format.orl  fs.oridoc  fs.orl  graph.orl  hash_table.orl  heap.orl  io.oridoc  io.orl  iter.orl  json.orl  linked_list.orl  list.oridoc  list.orl  log.oridoc  log.orl  map.oridoc  map.orl  math.orl  net.oridoc  net.orl  os.orl  path.oridoc  path.orl  process.orl  queue.orl  random.orl  set.orl  stack.orl  (+8 more)
tests/: README.md  test_game_concepts.orl  test_game_final.orl  test_game_simple.orl  test_ori_game.orl
tools/: bench_collections.ps1  check_docs_current_syntax.py  check_docs_paths.py  check_native_runtime_exports.ps1  ci_package_windows.ps1  compare_language_workloads.ps1  install_vscode_extension.sh  microbench_lang_perf.sh  migrate_syntax.sh  package_deb.sh  package_editor_extensions.sh  package_native_release.ps1  package_native_release.sh  quality_metrics.orl  smoke_native_release.ps1  smoke_native_release.sh  smoke_no_rust.sh  smoke_vscode_extension.ps1  smoke_vscode_extension.sh  stage_native_runtime.ps1  stage_native_runtime.sh  update_global.ps1  wsl_package.sh
tools/zenith-ide/src-tauri/: Cargo.toml  tauri.conf.json
tools/zenith-ide/src-tauri/capabilities/: default.json
tools/zenith-ide/src-tauri/src/: lib.rs  main.rs
(+1051 files in other folders)
