[workspace]
resolver = "2"
members = [
    "compiler/crates/ori-lexer",
    "compiler/crates/ori-ast",
    "compiler/crates/ori-parser",
    "compiler/crates/ori-types",
    "compiler/crates/ori-hir",
    "compiler/crates/ori-codegen",
    "compiler/crates/ori-runtime",
    "compiler/crates/ori-diagnostics",
    "compiler/crates/ori-lsp",
    "compiler/crates/ori-driver",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Ori Language Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ori-lang/ori"

[workspace.dependencies]
# Shared dependencies across crates (pinned here, referenced with { workspace = true })
logos      = "0.14"
libc       = "0.2"
serde_json = "1"
smol_str   = "0.2"
thiserror  = "2"
lsp-types  = "0.95"
tower-lsp  = "0.20"
tokio      = { version = "1", features = ["full"] }
clap       = { version = "4", features = ["derive"] }

# Cranelift — native code generation
cranelift-codegen  = "0.131"
cranelift-frontend = "0.131"
cranelift-module   = "0.131"
cranelift-object   = "0.131"
cranelift-native   = "0.131"

# Internal crates
ori-diagnostics = { path = "compiler/crates/ori-diagnostics" }
ori-lexer       = { path = "compiler/crates/ori-lexer" }
ori-ast         = { path = "compiler/crates/ori-ast" }
ori-parser      = { path = "compiler/crates/ori-parser" }
ori-types       = { path = "compiler/crates/ori-types" }
ori-hir         = { path = "compiler/crates/ori-hir" }
ori-codegen     = { path = "compiler/crates/ori-codegen" }
ori-runtime     = { path = "compiler/crates/ori-runtime" }
ori-driver      = { path = "compiler/crates/ori-driver" }
