[workspace]
resolver = "2"
members = [
    "crates/ori-lexer",
    "crates/ori-ast",
    "crates/ori-parser",
    "crates/ori-types",
    "crates/ori-hir",
    "crates/ori-codegen",
    "crates/ori-runtime",
    "crates/ori-diagnostics",
    "crates/ori-lsp",
    "crates/ori-driver",
]

[workspace.package]
version = "0.3.3"
edition = "2021"
authors = ["Ori Language Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ori-lang/ori"

[workspace.dependencies]
# Shared dependencies across crates (pinned here, referenced with { workspace = true })
logos      = "0.14"
libc       = "0.2"
serde      = "1"
serde_json = "1"
smol_str   = "0.2"
thiserror  = "2"
lsp-types  = "0.95"
tower-lsp  = "0.20"
tokio      = { version = "1", features = ["full"] }
clap       = { version = "4", features = ["derive"] }

# Cranelift — native code generation
cranelift-codegen  = "0.131"
cranelift-frontend = "0.131"
cranelift-module   = "0.131"
cranelift-object   = "0.131"
cranelift-native   = "0.131"
cranelift-jit      = "0.131"

# Dynamic library loading for JIT runtime resolution
libloading         = "0.8"

# Internal crates
ori-diagnostics = { path = "crates/ori-diagnostics" }
ori-lexer       = { path = "crates/ori-lexer" }
ori-ast         = { path = "crates/ori-ast" }
ori-parser      = { path = "crates/ori-parser" }
ori-types       = { path = "crates/ori-types" }
ori-hir         = { path = "crates/ori-hir" }
ori-codegen     = { path = "crates/ori-codegen" }
ori-runtime     = { path = "crates/ori-runtime" }
ori-driver      = { path = "crates/ori-driver" }
