[package]
name    = "ori-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ori-lsp"
path = "src/main.rs"

[dependencies]
ori-ast         = { workspace = true }
ori-diagnostics = { workspace = true }
ori-driver      = { workspace = true }
ori-lexer       = { workspace = true }
ori-parser      = { workspace = true }
ori-types       = { workspace = true }
lsp-types       = { workspace = true }
tower-lsp       = { workspace = true }
tokio           = { workspace = true }
serde_json      = { workspace = true }
