[package]
name = "zenith-ide"
version = "0.1.0"
edition = "2021"

[lib]
name = "zenith_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
